labs/aks/deploy/monitoring/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.29.1
          resources:
            limits:
              memory: 1024Mi
              cpu: 1000m
            requests:
              memory: 1024Mi
              cpu: 1000m
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
            - "--web.route-prefix=/prom"
            - "--web.external-url=/prom"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            # - name: prometheus-storage-volume
            #   mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf

        # - name: prometheus-storage-volume
        #   persistentVolumeClaim:
        #     claimName: prometheus-storage-volume
